--- a/h8dsft_looping.ipynb
+++ b/h8dsft_looping.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -25,35 +25,37 @@
      "output_type": "stream",
      "text": [
       "402\n",
+      "984\n",
       "360\n",
       "408\n",
+      "980\n",
       "544\n",
       "390\n",
+      "984\n",
       "592\n",
       "236\n",
+      "942\n",
       "386\n",
       "462\n",
       "418\n",
       "344\n",
       "236\n",
       "566\n",
+      "978\n",
       "328\n",
       "162\n",
       "758\n",
-      "412\n",
-      "566\n",
-      "826\n",
-      "248\n",
-      "866\n",
-      "626\n",
+      "918\n",
       "Done\n"
      ]
     }
    ],
    "source": [
     "for number in numbers:\n",
-    "    if number %2==0 and number < 918:\n",
+    "    if number %2==0:\n",
     "        print(number)\n",
+    "    if number == 918:\n",
+    "        break\n",
     "print('Done')"
    ]
   },
